--- a/source/scss/blocks/intro.scss
+++ b/source/scss/blocks/intro.scss
@@ -93,6 +93,9 @@
   text-transform: uppercase;
   font-size: 2.4rem;
   line-height: 1.27;
+  opacity: 0;
+  margin-bottom: -20px;
+  transition-duration: 1s;
 
   @media (min-width: $stop-scaling) {
     width: 509px;
