--- a/source/scss/blocks/slider.scss
+++ b/source/scss/blocks/slider.scss
@@ -39,6 +39,7 @@
   &:nth-child(even) {
     .slider__item-text {
       align-self: flex-end;
+      transition-duration: 3s;
 
       @media (max-width: $mobile) and (orientation: landscape) {
         align-self: flex-start;
@@ -49,6 +50,7 @@
   &:nth-child(2) {
     .slider__item-text {
       margin-top: 7.8rem;
+      transition-duration: 3s;
 
       @media (min-width: $stop-scaling) {
         margin-top: 78px;
@@ -96,8 +98,9 @@
   max-width: 34rem;
   font-size: 1.8rem;
   line-height: 2rem;
-  margin-right: -20px;
+  transform: translateX(40px);
   opacity: 0;
+  transition-duration: 2s;
 
   @media (min-width: $stop-scaling) {
     margin-top: 36px;
